--- a/index.html
+++ b/index.html
@@ -22,27 +22,27 @@
         <div class="profile">
           <img class="profile-image" src="images/Profilepic.png" alt="">
           <h2>Hello.</h2>
-          <p class="profile-paragraph">Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p class="profile-paragraph">I am a .NET and web developer. I am working at Accenture Solutions as Associate Software Engineer.I love coding and drawing illustrations.</p>
         </div>
         <hr>
         <div class="skills">
           <h2>My Skills.</h2>
           <div class="skill-row">
             <img class="round-image" src="images/codegif2.webp" alt="">
-            <h3>Lorem & Ipsum</h3>
-            <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros. Lorem ipsum dolor sit amet consectetur adipisicing elit. Repellat odit a amet tenetur recusandae nostrum libero, nihil corporis unde non.</p>
+            <h3>Design and Development</h3>
+            <p>I started learning to code when I was 16 because I wanted to create beautiful websites. Over the time, I have gained a wealth of experience designing and developing web applications using ASP.NET.</p>
           </div>
           <div class="skill-row">
             <img class="round-image illustrator-image" src="images/illustrator.png" alt="">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam. Lorem ipsum dolor sit amet consectetur adipisicing elit. Aliquid laborum eos dolores corporis eaque quaerat similique commodi ratione laudantium, reiciendis expedita. Hic odit provident nam!</p>
+            <h3>Illustration</h3>
+            <p>I used to draw pictures of nature when I was a child. That interest pulled me towards digital painting and it became my hobby. I make vector illustrations and logo designing using abobe illustrator.</p>
           </div>
         </div>
         <hr>
         <div class="contact-me">
           <h2>Get In Touch</h2>
-          <h3 class="bottom-margin">Lorem ipsum dolor sit amet, no.</h3>
-          <p class="bottom-margin">Lorem ipsum dolor sit amet, in quis, aenean amet. Phasellus sodales, tellus donec dui, ornare erat.</p>
+          <h3 class="bottom-margin">Want to build your own website?</h3>
+          <p class="bottom-margin">Please feel free to contact me for any queries or suggestions. </p>
           <a class="btn" href="mailto:kittuande999@gmail.com">CONTACT ME</a>
         </div>
       </div>
