--- a/index.html
+++ b/index.html
@@ -9,13 +9,13 @@
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <link rel="preconnect" href="https://fonts.googleapis.com">
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Merienda&family=Merriweather&family=Sacramento&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">  
+    <link href="https://fonts.googleapis.com/css2?family=Alice&family=Merienda&family=Merriweather&family=PT+Sans&family=Sacramento&family=Source+Sans+Pro:wght@300&display=swap" rel="stylesheet">
 </head>
 <body>
     <img class="top-cloud" src="images/cloud.png" alt="">
     
     <div class="top-container"><h1>I'm Krishna Chaitanya</h1>
-    <h2 id="caption">a Software developer</h2></div>
+    <h2 id="caption">a Web Developer</h2></div>
     <img class="bottom-cloud" src="images/cloud.png" alt="">
     <img class="mountain-image" src="images/mountain.png" alt="">
     <div class="middle-container">
