--- a/index.html
+++ b/index.html
@@ -42,7 +42,7 @@
         <div class="contact-me">
           <h2>Get In Touch</h2>
           <h3 class="bottom-margin">Want to build your own website?</h3>
-          <p class="bottom-margin">Please feel free to contact me for any queries or suggestions. </p>
+          <p class="bottom-margin">Feel free to write us for any queries or suggestions. Feedback is welcome.</p>
           <a class="btn" href="mailto:kittuande999@gmail.com">CONTACT ME</a>
         </div>
       </div>
